Photo-Gallry Assignment

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <title>Photo Gallary</title>
   </head>
-  <body id = "body">
+  <body>
     <!-- <img src="assests/images/bird-1.jpeg"> -->
     <div class = "container">
       <div class = "search-bar mt-5">
@@ -26,9 +26,16 @@
     </div>
    <!--  <button type = "button" id = "check">check</button> -->
     <div class = "container mt-5" id = "imageContainer">
+      <img src="assests/images/bird-1.jpeg" data-image="bird">
+      <img src="assests/images/bird-2.jpeg" data-image="bird">
+      <img src="assests/images/bird-3.jpeg" data-image="bird">
+      <img src="assests/images/bird-4.jpeg" data-image="bird">
+      <img src="assests/images/car-1.jpg" data-image="car">
+      <img src="assests/images/car-2.jpeg" data-image="car">
+      <img src="assests/images/car-3.jpeg" data-image="car">
       <!-- Gallery -->
-      <div class="row" id = "row">
-        <div class="col-lg-4 mb-4 mb-lg-0">
+      <!-- <div class="row" id = "row">
+        <div class="col-lg-4">
           <img
           src="assests/images/bird-1.jpeg"
           class="w-100 shadow-1-strong rounded mb-4"
@@ -82,8 +89,11 @@
           data-image = "car"
           />
         </div>
-      </div>
+      </div> -->
       <!-- Gallery -->
+    </div>
+    <div class="container mt-5" id="searchResult">
+      
     </div>
 
     
