--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
       <img src="assests/images/car-1.jpg" data-image="car">
       <img src="assests/images/car-2.jpeg" data-image="car">
       <img src="assests/images/car-3.jpeg" data-image="car">
+      <img src="assests/images/plane-1.jpeg" data-image="plane">
+      <img src="assests/images/plane-2.jpeg" data-image="plane">
+      <img src="assests/images/plane-3.jpeg" data-image="plane">
+      <img src="assests/images/plate-1.jpeg" data-image="plate">
+      <img src="assests/images/plate-2.jpeg" data-image="plate">
       <!-- Gallery -->
       <!-- <div class="row" id = "row">
         <div class="col-lg-4">
