Added multiple keywords for every image

--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
     </div>
    <!--  <button type = "button" id = "check">check</button> -->
     <div class = "container mt-5" id = "imageContainer">
-      <img src="assests/images/bird-1.jpeg" data-image="bird">
-      <img src="assests/images/bird-2.jpeg" data-image="bird">
-      <img src="assests/images/bird-3.jpeg" data-image="bird">
-      <img src="assests/images/bird-4.jpeg" data-image="bird">
-      <img src="assests/images/car-1.jpg" data-image="car">
-      <img src="assests/images/car-2.jpeg" data-image="car">
-      <img src="assests/images/car-3.jpeg" data-image="car">
-      <img src="assests/images/plane-1.jpeg" data-image="plane">
-      <img src="assests/images/plane-2.jpeg" data-image="plane">
-      <img src="assests/images/plane-3.jpeg" data-image="plane">
-      <img src="assests/images/plate-1.jpeg" data-image="plate">
-      <img src="assests/images/plate-2.jpeg" data-image="plate">
+      <img src="assests/images/bird-1.jpeg" data-image="bird,sparow">
+      <img src="assests/images/bird-2.jpeg" data-image="bird,sparow">
+      <img src="assests/images/bird-3.jpeg" data-image="bird,sparow">
+      <img src="assests/images/bird-4.jpeg" data-image="bird,sparow">
+      <img src="assests/images/car-1.jpg" data-image="car,race,sportscar">
+      <img src="assests/images/car-2.jpeg" data-image="car,race,sportscar">
+      <img src="assests/images/car-3.jpeg" data-image="car,race,sportscar">
+      <img src="assests/images/plane-1.jpeg" data-image="plane,aeroplane,aircraft">
+      <img src="assests/images/plane-2.jpeg" data-image="plane,aeroplane,aircraft">
+      <img src="assests/images/plane-3.jpeg" data-image="plane,aeroplane,aircraft">
+      <img src="assests/images/plate-1.jpeg" data-image="plate,aeroplane,aircraft">
+      <img src="assests/images/plate-2.jpeg" data-image="plate,aeroplane,aircraft">
       <!-- Gallery -->
       <!-- <div class="row" id = "row">
         <div class="col-lg-4">
