--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class = "container">
       <div class = "search-bar mt-5">
         <input type="search" placeholder = "Search here" id="searchInput">
-        <i class="fa fa-times" id = "crossIcon" data-click="cross"></i>
+        <i class="fa fa-times cross-icon" id = "crossIcon" data-click="cross"></i>
         <i class="fa fa-search" id = "searchIcon" data-click="search"></i>
       </div>
     </div>
@@ -47,7 +47,7 @@
     </div>
 
     
-    <script src="assests/js/custom1.js">
+    <script src="assests/js/custom.js">
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
